--- a/InfoWeb.Presentation/wwwroot/css/theme.css
+++ b/InfoWeb.Presentation/wwwroot/css/theme.css
@@ -133,3 +133,12 @@ hr {
     margin-top: 5px !important;
     margin-bottom: 5px !important;
 }
+table{
+    background-color:#fff !important;
+}
+#tableList {
+    margin-top: 50px;
+}
+#search {
+    margin-bottom: 10px !important;
+}
