Update view project

--- a/InfoWeb.Presentation/wwwroot/application/views/project/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/list.html
@@ -1,11 +1,11 @@
 ﻿
 <div class="container-fluid">
     <div id="search" class="pull-right">
-        <input class="form-control" type="text" name="searchMovies" placeholder="Buscar..." ng-model="search.term" ng-click="model.tableParams.sorting({})" />
+        <input class="form-control" type="text" name="searchProject" placeholder="Buscar..." ng-model="search.term" ng-click="model.tableParams.sorting({})" />
     </div>
  <div id="tableList">
      <table ng-table="model.tableParams" class="table table-hover table-responsive">
-         <tr ng-repeat="assignment in $data">
+         <tr ng-repeat="assignment in $data" ng-click="verDetalles(assignment.id);">
              <td title="'Nombre'">
                  {{assignment.project.name}}
              </td>
