--- a/InfoWeb.Presentation/wwwroot/css/theme.css
+++ b/InfoWeb.Presentation/wwwroot/css/theme.css
@@ -138,6 +138,7 @@ table{
 }
 #tableList {
     margin-top: 50px;
+    background-color: #fff !important;
 }
 #search {
     margin-bottom: 10px !important;
