--- a/InfoWeb.Presentation/wwwroot/application/views/project/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/list.html
@@ -15,6 +15,9 @@
              <td title="'Cliente'">
                  {{assignment.project.client.name}}
              </td>
+             <td title="'Opciones'">
+                 <span class="glyphicon glyphicon-trash"></span>
+             </td>
          </tr>
      </table>
  </div>
