--- a/InfoWeb.Presentation/wwwroot/application/views/project/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/list.html
@@ -4,16 +4,28 @@
         <input class="form-control" type="text" name="searchProject" placeholder="Buscar..." ng-model="search.term" ng-click="model.tableParams.sorting({})" />
     </div>
  <div id="tableList">
-     <table ng-table="model.tableParams" class="table table-hover table-responsive">
+     <table ng-table="model.tableParams" class="table table-hover table-bordered">
          <tr ng-repeat="assignment in $data" ng-click="verDetalles(assignment.id);">
              <td title="'Nombre'">
                  {{assignment.project.name}}
              </td>
-             <td title="'Fecha'">
-                 {{assignment.date}}
-             </td>
              <td title="'Cliente'">
                  {{assignment.project.client.name}}
+             </td>
+             <!--<td title="'Tipo de Hora'" >
+                 <div ng-if="assignment.hourType.name == null">
+                     <span>Todas</span>
+                 </div>
+                 {{assignment.hourType.name}}               
+             </td>
+             <td title="'Cant. Horas'">
+                 {{assignment.hours}}
+             </td>
+             <td title="'Fecha Inicio'">
+                 {{assignment.date | date:"dd/MM/yyyy"}}
+             </td>-->
+             <td title="'Tipo de asignación'">
+                 {{assignment.assignmentType.name}}
              </td>
              <td title="'Opciones'">
                  <span class="glyphicon glyphicon-trash"></span>
