--- a/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
@@ -8,19 +8,20 @@
             <div class="row">
                 <div class="col-md-4">
                     <select class="form-control" ng-model="selectedProject" ng-options=" project.project.name for project in projects">
-                        <option value="">Select Option</option>
+                        <option value="">Seleccione Proyecto</option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <select class="form-control" ng-model="selectedUser" ng-options=" user.name for user in users">
-                        <option value="">Select Option</option>
+                        <option value="">Seleccione Usuario</option>
                     </select>
                 </div>
                 <div class="col-md-4">
-                    <button class="btn btn-primary" ng-click="assignProject();">Asignar </button>
+                    <button class="btn btn-primary  btn-raised pull-right" ng-click="assignProject();">Asignar </button>
                 </div>
             </div>
         </div>
     </div>
    
 </div>
+ 
