--- a/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
@@ -8,7 +8,7 @@
                 <div class="section row">
                     <div class="col-md-4">
                         <label>Seleccione el proyecto</label>
-                        <select class="form-control" ng-model="assignment.project" ng-options=" project.project.name for project in projects">
+                        <select class="form-control" ng-model="assignment.project" ng-options="project.name for project in projects">
                             <option value="">Seleccione</option>
                         </select>
                     </div>
