--- a/InfoWeb.Presentation/wwwroot/application/views/project/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/list.html
@@ -5,30 +5,15 @@
     </div>
  <div id="tableList">
      <table ng-table="model.tableParams" class="table table-hover table-responsive">
-         <tr ng-repeat="assignment in $data">
+         <tr ng-repeat="project in $data">
              <td title="'Nombre'">
-                 {{assignment.project.name}}
+                 {{project.name}}
              </td>
              <td title="'Cliente'">
-                 {{assignment.project.client.name}}
-             </td>
-             <!--<td title="'Tipo de Hora'" >
-                 <div ng-if="assignment.hourType.name == null">
-                     <span>Todas</span>
-                 </div>
-                 {{assignment.hourType.name}}               
-             </td>
-             <td title="'Cant. Horas'">
-                 {{assignment.hours}}
-             </td>
-             <td title="'Fecha Inicio'">
-                 {{assignment.date | date:"dd/MM/yyyy"}}
-             </td>-->
-             <td title="'Tipo de asignación'">
-                 {{assignment.assignmentType.name}}
+                 {{project.client.name}}
              </td>
              <td title="'Opciones'">
-                 <span class="glyphicon glyphicon-list-alt" ng-click="viewDetails(assignment.project.id)"></span>
+                 <span class="glyphicon glyphicon-list-alt" ng-click="viewDetails(project.id)"></span>
                  <span class="glyphicon glyphicon-trash"></span>
              </td>
          </tr>
