--- a/InfoWeb.Presentation/wwwroot/application/views/hour-type/remove-modal.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/hour-type/remove-modal.html
@@ -4,11 +4,11 @@
             <h3 class="modal-title" id="modal-title">Eliminar</h3>
         </div>
         <div class="modal-body" id="modal-body">
-            <span>¿Desesa eliminar el tipo de hora <strong>{{msge}}</strong> ?</span>
+            <span>¿Desesa eliminar el rol <strong>{{msge}}</strong> ?</span>
         </div>
         <div class="modal-footer">
             <button class="btn btn-danger btn-raised" type="button" ng-click="ok()">Aceptar</button>
             <button class="btn btn-primary btn-raised" type="button" ng-click="cancel()">Cancelar</button>
         </div>
-    </div>    
+    </div>
 </div>
