added assignment type management v1.0

--- a/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
@@ -7,7 +7,7 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-4">
-                    <select class="form-control" ng-model="selectedProject" ng-options=" project.project.name for project in projects">
+                    <select class="form-control" ng-model="selectedProject" ng-options="project.name for project in projects">
                         <option value="">Seleccione Proyecto</option>
                     </select>
                 </div>
