--- a/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
@@ -25,7 +25,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="section row" style="margin-top:25px">
+                <div class="section row" style="margin-top:25px" ng-show="selectedItem">
                     <div class="col-md-4">
                         <label>Seleccione el tipo de horas</label>
                         <select class="form-control" ng-model="assignment.hourType" ng-options="HoursType.name for HoursType in HoursTypes" ng-change="changeValue();">
