added project remove modal

--- a/InfoWeb.Presentation/wwwroot/application/views/project/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/list.html
@@ -14,7 +14,7 @@
              </td>
              <td title="'Opciones'">
                  <span class="glyphicon glyphicon-list-alt" ng-click="viewDetails(project.id)"></span>
-                 <span class="glyphicon glyphicon-trash"></span>
+                 <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(project.id)"></span>
              </td>
          </tr>
      </table>
