--- a/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
@@ -7,12 +7,12 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-4">
-                    <select class="form-control" ng-model="selectedProject" ng-options="project.name for project in projects">
+                    <select class="form-control" ng-model="model.project" ng-options="project.name for project in projects">
                         <option value="">Seleccione Proyecto</option>
                     </select>
                 </div>
                 <div class="col-md-4">
-                    <select class="form-control" ng-model="selectedUser" ng-options=" user.name for user in users">
+                    <select class="form-control" ng-model="model.assignee" ng-options=" user.name for user in users">
                         <option value="">Seleccione Usuario</option>
                     </select>
                 </div>
