--- a/InfoWeb.Presentation/wwwroot/application/views/assignment-type/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/assignment-type/list.html
@@ -16,7 +16,7 @@
 
 
             <div id="tableList" class="ng-table-responsive">
-                <table ng-table="model.tableParams" class="table striped bordered" id="rolTable">
+                <table ng-table="model.tableParams" class="table table-hover" id="rolTable">
                     <thead>
                         <tr>
                             <td><b>Nombre</b></td>
