--- a/InfoWeb.Presentation/wwwroot/application/views/project/details.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/details.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <span>Detalles de proyecto</span>
+            <span><b>Detalles del proyecto</b></span>
         </div>
         <div class="panel-body">
             <div class="panel">
