--- a/InfoWeb.Presentation/wwwroot/application/views/user/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/user/list.html
@@ -11,10 +11,10 @@
                 </div>
             </div>
             <div class="pull-left">
-                <button class="btn btn-primary btn-raised btn-info" ng-click="onCreateClicked()"><span class="glyphicon glyphicon-plus">Nuevo</span></button>
+                <button class="btn btn-primary btn-raised btn-info" ng-click="onCreateClicked()"><span class="glyphicon glyphicon-plus"></span>Nuevo</button>
             </div>
             <div id="tableList">
-                <table ng-table="model.tableParams" class="table table-striped  bordered table-responsive">
+                <table ng-table="model.tableParams" class="table table-hover">
                     <thead>
                         <tr>
                             <td><b>Nombre</b></td>
