--- a/InfoWeb.Presentation/wwwroot/application/views/assignments/single-developer.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/assignments/single-developer.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <span><b>Asignar horas a un desarrollador</b></span>
+            <span><b>Asignar horas</b></span>
         </div>
         <div class="panel-body">
             <div class="row">
@@ -12,7 +12,7 @@
                     </select>
                 </div>
                 <div class="col-md-6">
-                    <select class="form-control" ng-model="assignment.user" ng-options=" user.name for user in technicians">
+                    <select class="form-control" ng-model="assignment.user" ng-options="user.name for user in technicians">
                         <option value="">Seleccione usuario</option>
                     </select>
                 </div>
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <select class="form-control" ng-model="assignment.hourType" ng-options="hourType.name for hourType in hourTypes">
-                        <option value="">Seleccione Tipo de Hora</option>
+                        <option value="">Seleccione tipo de hora</option>
                     </select>
                 </div>
                 <div class="col-md-6">
