fixed user management use case

--- a/InfoWeb.Presentation/wwwroot/application/views/user/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/user/list.html
@@ -32,8 +32,8 @@
                             </td>
                             <td>
                                 <span>
-                                    <span class="glyphicon glyphicon-pencil"></span>
-                                    <span class="glyphicon glyphicon-trash"></span>
+                                    <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(user.id)"></span>
+                                    <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(user)"></span>
                                 </span>
                             </td>
                         </tr>
