removed delete option when user is not admin in project list view

--- a/InfoWeb.Presentation/wwwroot/application/views/project/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/list.html
@@ -27,9 +27,9 @@
                             <td>
                                 {{project.client.name}}
                             </td>
-                            <td>
+                            <td >
                                 <span class="glyphicon glyphicon-list" ng-click="viewDetails(project.id)"></span>
-                                <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(project.id)"></span>
+                                <span ng-if="currentUser.role.name == 'ADMIN'" class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(project.id)"></span>
                             </td>
                         </tr>
                     </tbody>
