fixing some navigation issues

--- a/InfoWeb.Presentation/wwwroot/application/views/client/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/client/list.html
@@ -31,7 +31,7 @@
                             <td>
                                 <span>
                                     <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(client.id)"></span>
-                                    <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(client.id)"></span>
+                                    <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(client)"></span>
                                 </span>
                             </td>
                         </tr>
