--- a/InfoWeb.Presentation/wwwroot/application/views/project/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/list.html
@@ -29,7 +29,7 @@
                             </td>
                             <td >
                                 <span class="glyphicon glyphicon-list" ng-click="viewDetails(project.id)"></span>
-                                <span ng-if="currentUser.role.name == 'ADMIN'" class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(project.id)"></span>
+                                <span ng-if="currentUser.role.name == 'ADMIN'" class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(project)"></span>
                             </td>
                         </tr>
                     </tbody>
