--- a/InfoWeb.Presentation/wwwroot/application/views/user/user-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/user/user-input.html
@@ -10,7 +10,7 @@
                         <input class="form-control" type="text" ng-model="model.name" />
                 </div>
                 <div class="col-md-6">
-                    <label>Seleccione el rol</label>
+                    <label>Seleccione rol</label>
                     <select class="form-control" ng-model="model.role" ng-options="role.name for role in roles">
                         <option value="">Seleccione</option>
                     </select>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-md-6">
                    
-                        <label>Confirmar Contraseña</label>
+                        <label>Confirmar contraseña</label>
                         <input class="form-control" type="password" ng-model="model.passwordConfirmation" />
                    
                 </div>
