--- a/InfoWeb.Presentation/wwwroot/application/views/client/remove-modal.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/client/remove-modal.html
@@ -4,7 +4,7 @@
             <h3 class="modal-title" id="modal-title">Eliminar</h3>
         </div>
         <div class="modal-body" id="modal-body">
-            <span>¿Desesa eliminar el cliente <strong>{{msge}}</strong>?</span>
+            <span>¿Desea eliminar el cliente <strong>{{msge}}</strong>?</span>
         </div>
         <div class="modal-footer">
             <button class="btn btn-danger btn-raised" type="button" ng-click="ok()">Aceptar</button>
