--- a/InfoWeb.Presentation/wwwroot/application/views/user/user-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/user/user-input.html
@@ -10,7 +10,7 @@
                         <input class="form-control" type="text" ng-model="model.name" />
                 </div>
                 <div class="col-md-6">
-                    <label>Seleccione rol</label>
+                    <label>Rol</label>
                     <select class="form-control" ng-model="model.role" ng-options="role.name for role in roles">
                         <option value="">Seleccione</option>
                     </select>
